removed doc files

--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -13,26 +13,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
+   "id": "98140383-188c-457c-8e04-7e4620b410a1",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-21T05:15:28.392550Z",
+     "iopub.status.busy": "2024-06-21T05:15:28.392215Z",
+     "iopub.status.idle": "2024-06-21T05:15:28.421147Z",
+     "shell.execute_reply": "2024-06-21T05:15:28.419968Z",
+     "shell.execute_reply.started": "2024-06-21T05:15:28.392526Z"
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "%reload_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "f4b557c6-c6ed-4c9c-bb72-60b1256a6003",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:58:01.669394Z",
-     "iopub.status.busy": "2024-05-08T13:58:01.669146Z",
-     "iopub.status.idle": "2024-05-08T13:58:02.228735Z",
-     "shell.execute_reply": "2024-05-08T13:58:02.227809Z",
-     "shell.execute_reply.started": "2024-05-08T13:58:01.669381Z"
+     "iopub.execute_input": "2024-06-21T05:15:29.910345Z",
+     "iopub.status.busy": "2024-06-21T05:15:29.910019Z",
+     "iopub.status.idle": "2024-06-21T05:15:33.108589Z",
+     "shell.execute_reply": "2024-06-21T05:15:33.107438Z",
+     "shell.execute_reply.started": "2024-06-21T05:15:29.910321Z"
     }
    },
    "outputs": [],
    "source": [
     "import os\n",
-    "import anthropic\n",
+    "import openai\n",
     "import os\n",
     "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "# for un-makrdowning the text from openai\n",
+    "from markdown_it import MarkdownIt\n",
+    "from mdit_plain.renderer import RendererPlain\n",
     "\n",
     "from lib_henryk.config import *\n",
-    "from lib_henryk.logger import *"
+    "from lib_henryk.logger import *\n",
+    "from lib_henryk import utils\n",
+    "from lib_henryk.recordings import transcriptions\n",
+    "from lib_henryk.recordings import classification\n",
+    "from lib_henryk.recordings import recordings"
    ]
   },
   {
@@ -41,11 +70,11 @@
    "id": "c8830692-5768-41d1-a831-8121746d079d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:46:32.808223Z",
-     "iopub.status.busy": "2024-05-08T13:46:32.808022Z",
-     "iopub.status.idle": "2024-05-08T13:46:32.832483Z",
-     "shell.execute_reply": "2024-05-08T13:46:32.831655Z",
-     "shell.execute_reply.started": "2024-05-08T13:46:32.808211Z"
+     "iopub.execute_input": "2024-06-21T05:15:33.113032Z",
+     "iopub.status.busy": "2024-06-21T05:15:33.110846Z",
+     "iopub.status.idle": "2024-06-21T05:15:33.144992Z",
+     "shell.execute_reply": "2024-06-21T05:15:33.143948Z",
+     "shell.execute_reply.started": "2024-06-21T05:15:33.113003Z"
     }
    },
    "outputs": [],
@@ -55,113 +84,288 @@
     "_ = load_dotenv()\n",
     "\n",
     "# Your OpenAI API key\n",
-    "api_key = os.getenv('CLAUDE_API_KEY')\n",
-    "\n",
-    "WEBHOOKS_TOKEN_ID = '2660666c-d957-4485-9a95-5e264563a022'"
+    "api_key = os.getenv('OPENAI_API_KEY')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4fc7cee2-37d9-4fd6-8422-479b698b3b82",
+   "metadata": {},
+   "source": [
+    "## Load Resources\n",
+    "- prompts - there are a set of pre-configured prompts that behave well and give good results\n",
+    "- transcriptions - all recordings are processed with transcription service and results are saved to a parquet file (db)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "08d9b60c-52b3-4506-ae21-29a05f65b818",
+   "execution_count": 4,
+   "id": "636f76be-2822-4d4a-b9bb-8c5bded58aca",
    "metadata": {
+    "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:48:02.701325Z",
-     "iopub.status.busy": "2024-05-08T13:48:02.701067Z",
-     "iopub.status.idle": "2024-05-08T13:48:02.739871Z",
-     "shell.execute_reply": "2024-05-08T13:48:02.738881Z",
-     "shell.execute_reply.started": "2024-05-08T13:48:02.701308Z"
-    }
+     "iopub.execute_input": "2024-06-21T05:15:36.305301Z",
+     "iopub.status.busy": "2024-06-21T05:15:36.304915Z",
+     "iopub.status.idle": "2024-06-21T05:15:36.432849Z",
+     "shell.execute_reply": "2024-06-21T05:15:36.431925Z",
+     "shell.execute_reply.started": "2024-06-21T05:15:36.305275Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# recordings transcriptions\n",
+    "df_transcriptions = pd.read_parquet(FILE_TRANSCRIPTIONS_PARQUET)\n",
+    "df_transcriptions = recordings.sort_df_by_date_inferred_from_name(df_transcriptions)\n",
+    "df_transcription_classification = pd.read_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18a2b005-111e-485d-b79c-246f4c5a5161",
+   "metadata": {},
+   "source": [
+    "## Perform Classification\n",
+    "- read existing transcriptions database (parquet file)\n",
+    "- read existing classification database (parquet file)\n",
+    "- run classifier with openai gpt (currently model 4o)\n",
+    "- use prompt crafted in a separate file [classification prompt](../../resources/recording_classification.md)\n",
+    "- we are using `few-shots` engineered prompt with rich examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "id": "0559d797-343c-45df-a5dd-8bb9d6ca43a3",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:12:40.587094Z",
+     "iopub.status.busy": "2024-06-21T09:12:40.586861Z",
+     "iopub.status.idle": "2024-06-21T09:12:40.985757Z",
+     "shell.execute_reply": "2024-06-21T09:12:40.985118Z",
+     "shell.execute_reply.started": "2024-06-21T09:12:40.587078Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_transcriptions_selected = df_transcriptions.iloc[0:200]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "9b89edcb-76f6-4596-a4f5-d7abc9dba479",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:14:41.794471Z",
+     "iopub.status.busy": "2024-06-21T09:14:41.794081Z",
+     "iopub.status.idle": "2024-06-21T09:14:43.080967Z",
+     "shell.execute_reply": "2024-06-21T09:14:43.080258Z",
+     "shell.execute_reply.started": "2024-06-21T09:14:41.794452Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "transcription_classifier = classification.Transcription_Classifier(api_key=api_key)\n",
+    "transcription_classifier.initialise_prompt(prompt_file_path=FILE_PROMPT_RECORDING_CLASSIFICATION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a1a3727e-aa8a-4219-b8e3-51b5e01c1553",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:47:59.759249Z",
+     "iopub.status.busy": "2024-06-21T09:47:59.758957Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'Anthropic' object has no attribute 'list_chats'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m response\u001b[38;5;241m.\u001b[39mcontent\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# Find the existing chat or create a new one\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m chat \u001b[38;5;241m=\u001b[39m \u001b[43mfind_chat_by_name\u001b[49m\u001b[43m(\u001b[49m\u001b[43mchat_name\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chat \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     33\u001b[0m     chat \u001b[38;5;241m=\u001b[39m create_new_chat(chat_name)\n",
-      "Cell \u001b[0;32mIn[6], line 9\u001b[0m, in \u001b[0;36mfind_chat_by_name\u001b[0;34m(name)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mfind_chat_by_name\u001b[39m(name):\n\u001b[0;32m----> 9\u001b[0m     chats \u001b[38;5;241m=\u001b[39m \u001b[43mclient\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist_chats\u001b[49m()\n\u001b[1;32m     10\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m chat \u001b[38;5;129;01min\u001b[39;00m chats:\n\u001b[1;32m     11\u001b[0m         \u001b[38;5;28;01mif\u001b[39;00m chat\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m name:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'Anthropic' object has no attribute 'list_chats'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-06-21 09:48:00 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
+      "2024-06-21 09:48:00 - \u001b[33mWARNING\u001b[0m - \u001b[34mperform_classification\u001b[0m - unable to provide initial classification dataset, classification is in progress\n",
+      "classifying 145/200 transcriptions |█████████████████████████████-----------| 72.5% [145] Henryk 2022-12-08 Królik i Prosiaczek odwiedzają Kłapouchego p...\r"
      ]
     }
    ],
    "source": [
-    "# Set up the Anthropic API client\n",
-    "client = anthropic.Client(api_key=api_key)\n",
-    "\n",
-    "# Specify the chat name\n",
-    "chat_name = \"My Chat\"\n",
-    "\n",
-    "# Function to find an existing chat by name\n",
-    "def find_chat_by_name(name):\n",
-    "    chats = client.list_chats()\n",
-    "    for chat in chats:\n",
-    "        if chat.name == name:\n",
-    "            return chat\n",
-    "    return None\n",
-    "\n",
-    "# Function to create a new chat\n",
-    "def create_new_chat(name):\n",
-    "    chat = client.create_chat(name=name)\n",
-    "    return chat\n",
-    "\n",
-    "# Function to upload a file to the chat\n",
-    "def upload_file(chat_id, file_path):\n",
-    "    with open(file_path, \"rb\") as file:\n",
-    "        client.upload_file(chat_id=chat_id, file=file)\n",
-    "\n",
-    "# Function to ask a question and receive an answer\n",
-    "def ask_question(chat_id, question):\n",
-    "    response = client.send_message(chat_id=chat_id, message=question)\n",
-    "    return response.content\n",
-    "\n",
-    "# Find the existing chat or create a new one\n",
-    "chat = find_chat_by_name(chat_name)\n",
-    "if chat is None:\n",
-    "    chat = create_new_chat(chat_name)\n",
-    "\n",
-    "# Upload a file to the chat\n",
-    "file_path = \"path/to/your/file.txt\"\n",
-    "upload_file(chat.chat_id, file_path)\n",
-    "\n",
-    "# Ask a question and receive the answer\n",
-    "question = \"What is the main topic of the uploaded document?\"\n",
-    "answer = ask_question(chat.chat_id, question)\n",
-    "\n",
-    "print(\"Question:\", question)\n",
-    "print(\"Answer:\", answer)"
+    "transcription_classifier.perform_classification(df_transcriptions_selected, df_transcriptions_classifications, verbose=False)\n",
+    "transcription_classifier.save_classification_parquet(path=FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)\n",
+    "df_transcriptions_classifications = transcription_classifier.df_transcriptions_classifications"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "b9b834d1-ef10-4982-93d5-ce6d2dba253f",
+   "execution_count": 44,
+   "id": "db01364e-e17a-4012-ba1b-690dcd9b3d26",
    "metadata": {
+    "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-05-08T13:54:06.561906Z",
-     "iopub.status.busy": "2024-05-08T13:54:06.561123Z",
-     "iopub.status.idle": "2024-05-08T13:54:06.570802Z",
-     "shell.execute_reply": "2024-05-08T13:54:06.570246Z",
-     "shell.execute_reply.started": "2024-05-08T13:54:06.561886Z"
-    }
+     "iopub.execute_input": "2024-06-21T06:02:31.959417Z",
+     "iopub.status.busy": "2024-06-21T06:02:31.959197Z",
+     "iopub.status.idle": "2024-06-21T06:02:31.976020Z",
+     "shell.execute_reply": "2024-06-21T06:02:31.975425Z",
+     "shell.execute_reply.started": "2024-06-21T06:02:31.959399Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "text_md = transcription_classifier.messages.to_dict()['data'][0]['content'][0]['text']['value']\n",
+    "text_json = transcription_classifier.unmarkdown_parser.render(text_md)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c806873b-ce6f-42b7-abd8-2e3cfd712375",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "response = transcription_classifier.df_transcription_classification.iloc[-1]['classification_json']\n",
+    "response_json = json.loads(response)\n",
+    "display(response_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 120,
+   "id": "15ab84c4-7854-42b3-9b4e-48f0e1012dc4",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:45:26.927834Z",
+     "iopub.status.busy": "2024-06-21T09:45:26.927083Z",
+     "iopub.status.idle": "2024-06-21T09:45:27.565092Z",
+     "shell.execute_reply": "2024-06-21T09:45:27.564318Z",
+     "shell.execute_reply.started": "2024-06-21T09:45:26.927816Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'*clears throat and speaks in a croaky voice* Hmm, well I am today, young Padawan. The Force, strong in me it flows. Yes, heh heh heh.'"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 132 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
+      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
+      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - new file will be replacing old one (old has 132 records vs new 132)\n"
+     ]
     }
    ],
    "source": [
-    "message.content[0].text"
+    "transcription_classifier.save_classification_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 121,
+   "id": "303db268-009c-4a57-bf0a-1b856502c136",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:45:35.531262Z",
+     "iopub.status.busy": "2024-06-21T09:45:35.531040Z",
+     "iopub.status.idle": "2024-06-21T09:45:35.552954Z",
+     "shell.execute_reply": "2024-06-21T09:45:35.552089Z",
+     "shell.execute_reply.started": "2024-06-21T09:45:35.531247Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_backup = pd.read_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "id": "3c047d1a-7f42-4dc0-abb2-d3fe85b77dd7",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:13:33.224128Z",
+     "iopub.status.busy": "2024-06-21T09:13:33.223904Z",
+     "iopub.status.idle": "2024-06-21T09:13:33.239887Z",
+     "shell.execute_reply": "2024-06-21T09:13:33.238875Z",
+     "shell.execute_reply.started": "2024-06-21T09:13:33.224113Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "transcription_classifier.df_transcriptions_classifications = df_backup.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "id": "98de1c1a-d7f2-4420-83de-3248d9aaf449",
+   "metadata": {
+    "editable": true,
+    "execution": {
+     "iopub.execute_input": "2024-06-21T09:13:56.109994Z",
+     "iopub.status.busy": "2024-06-21T09:13:56.109768Z",
+     "iopub.status.idle": "2024-06-21T09:13:56.125419Z",
+     "shell.execute_reply": "2024-06-21T09:13:56.124896Z",
+     "shell.execute_reply.started": "2024-06-21T09:13:56.109965Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df_transcriptions_classifications = df_backup.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5a111228-32d1-4788-a470-546361c618a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
