--- a/notebooks/recordings/2 - Analyse recodings stats.ipynb
+++ b/notebooks/recordings/2 - Analyse recodings stats.ipynb
@@ -22,11 +22,11 @@
    "id": "0dc3ed69-d542-409c-8972-73704d390982",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T17:29:53.335064Z",
-     "iopub.status.busy": "2024-06-20T17:29:53.334666Z",
-     "iopub.status.idle": "2024-06-20T17:29:53.355078Z",
-     "shell.execute_reply": "2024-06-20T17:29:53.353708Z",
-     "shell.execute_reply.started": "2024-06-20T17:29:53.335029Z"
+     "iopub.execute_input": "2024-06-21T00:11:31.020624Z",
+     "iopub.status.busy": "2024-06-21T00:11:31.020393Z",
+     "iopub.status.idle": "2024-06-21T00:11:31.057553Z",
+     "shell.execute_reply": "2024-06-21T00:11:31.043220Z",
+     "shell.execute_reply.started": "2024-06-21T00:11:31.020605Z"
     },
     "tags": []
    },
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T17:29:54.918411Z",
-     "iopub.status.busy": "2024-06-20T17:29:54.918119Z",
-     "iopub.status.idle": "2024-06-20T17:29:56.846369Z",
-     "shell.execute_reply": "2024-06-20T17:29:56.845183Z",
-     "shell.execute_reply.started": "2024-06-20T17:29:54.918391Z"
+     "iopub.execute_input": "2024-06-21T00:16:05.106951Z",
+     "iopub.status.busy": "2024-06-21T00:16:05.106612Z",
+     "iopub.status.idle": "2024-06-21T00:16:05.140235Z",
+     "shell.execute_reply": "2024-06-21T00:16:05.137828Z",
+     "shell.execute_reply.started": "2024-06-21T00:16:05.106929Z"
     }
    },
    "outputs": [],
@@ -71,15 +71,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T17:41:02.768503Z",
-     "iopub.status.busy": "2024-06-20T17:41:02.767713Z",
-     "iopub.status.idle": "2024-06-20T17:41:02.806738Z",
-     "shell.execute_reply": "2024-06-20T17:41:02.804116Z",
-     "shell.execute_reply.started": "2024-06-20T17:41:02.768469Z"
+     "iopub.execute_input": "2024-06-21T00:11:32.584745Z",
+     "iopub.status.busy": "2024-06-21T00:11:32.584398Z",
+     "iopub.status.idle": "2024-06-21T00:11:32.669393Z",
+     "shell.execute_reply": "2024-06-21T00:11:32.668448Z",
+     "shell.execute_reply.started": "2024-06-21T00:11:32.584723Z"
     }
    },
    "outputs": [],
@@ -101,15 +101,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "45b5426a-1dde-4f21-88cf-d402ee8b8d80",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T17:41:34.377334Z",
-     "iopub.status.busy": "2024-06-20T17:41:34.376981Z",
-     "iopub.status.idle": "2024-06-20T17:41:34.403978Z",
-     "shell.execute_reply": "2024-06-20T17:41:34.403305Z",
-     "shell.execute_reply.started": "2024-06-20T17:41:34.377305Z"
+     "iopub.execute_input": "2024-06-21T00:11:32.671151Z",
+     "iopub.status.busy": "2024-06-21T00:11:32.670618Z",
+     "iopub.status.idle": "2024-06-21T00:11:32.722917Z",
+     "shell.execute_reply": "2024-06-21T00:11:32.722015Z",
+     "shell.execute_reply.started": "2024-06-21T00:11:32.671127Z"
     }
    },
    "outputs": [],
@@ -161,15 +161,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "id": "40fec2dd-394a-4821-9bc8-b09be8eace5c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-20T17:44:38.662384Z",
-     "iopub.status.busy": "2024-06-20T17:44:38.662097Z",
-     "iopub.status.idle": "2024-06-20T17:44:39.857978Z",
-     "shell.execute_reply": "2024-06-20T17:44:39.857133Z",
-     "shell.execute_reply.started": "2024-06-20T17:44:38.662365Z"
+     "iopub.execute_input": "2024-06-21T00:17:34.155249Z",
+     "iopub.status.busy": "2024-06-21T00:17:34.153620Z",
+     "iopub.status.idle": "2024-06-21T00:17:36.004422Z",
+     "shell.execute_reply": "2024-06-21T00:17:36.003382Z",
+     "shell.execute_reply.started": "2024-06-21T00:17:34.155204Z"
     }
    },
    "outputs": [
@@ -216,8 +216,17 @@
     "axs[1].xaxis.set_major_locator(mdates.AutoDateLocator(minticks=14, maxticks=22))   #to get a tick every 15 minutes\n",
     "axs[1].tick_params(axis='x', labelrotation=45, labelsize=8)\n",
     "fig.tight_layout(rect=[0, 0.01, 1, 0.99])\n",
-    "plt.show()"
+    "plt.show()\n",
+    "fig.savefig(DIR_FIGURES + '/recordings_duration_fequency.png', dpi=fig.dpi)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcf6e824-3da7-4634-8cc1-6c771cacab4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
