finished stable classifier with gpt-4o and custom prompts

--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -205,7 +205,7 @@
      "text": [
       "2024-06-21 09:48:00 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
       "2024-06-21 09:48:00 - \u001b[33mWARNING\u001b[0m - \u001b[34mperform_classification\u001b[0m - unable to provide initial classification dataset, classification is in progress\n",
-      "classifying 145/200 transcriptions |█████████████████████████████-----------| 72.5% [145] Henryk 2022-12-08 Królik i Prosiaczek odwiedzają Kłapouchego p...\r"
+      "classifying 199/200 transcriptions |███████████████████████████████████████-| 99.5% [199] Henryk 2023-02-14 Przyjaciele Kubusia Puchatka przybywają nad s...\r"
      ]
     }
    ],
