--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -185,13 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 124,
    "id": "a1a3727e-aa8a-4219-b8e3-51b5e01c1553",
    "metadata": {
     "editable": true,
     "execution": {
      "iopub.execute_input": "2024-06-21T09:47:59.759249Z",
-     "iopub.status.busy": "2024-06-21T09:47:59.758957Z"
+     "iopub.status.busy": "2024-06-21T09:47:59.758957Z",
+     "iopub.status.idle": "2024-06-21T10:35:15.675867Z",
+     "shell.execute_reply": "2024-06-21T10:35:15.675142Z",
+     "shell.execute_reply.started": "2024-06-21T09:47:59.759229Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -205,7 +208,12 @@
      "text": [
       "2024-06-21 09:48:00 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
       "2024-06-21 09:48:00 - \u001b[33mWARNING\u001b[0m - \u001b[34mperform_classification\u001b[0m - unable to provide initial classification dataset, classification is in progress\n",
-      "classifying 199/200 transcriptions |███████████████████████████████████████-| 99.5% [199] Henryk 2023-02-14 Przyjaciele Kubusia Puchatka przybywają nad s...\r"
+      "classifying 200 transcriptions |████████████████████████████████████████| 100.0% done.                                                                   s...\n",
+      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - more (203) classifications than requested, classifier was executed before on different dataset \n",
+      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - \u001b[22m\u001b[49m\u001b[92m*** all 200 requested transcriptions classifications were completed ***\u001b[0m\n",
+      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 203 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
+      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
+      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - new file will be replacing old one (old has 132 records vs new 203)\n"
      ]
     }
    ],
