--- a/notebooks/recordings/1 - Generate recordings stats.ipynb
+++ b/notebooks/recordings/1 - Generate recordings stats.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "a5d93d52-612d-4b4a-aa50-9fe996355168",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "# Generate Stats\n",
     "Processes a set of audio files and produces a dataframe and a dataset with the stats"
@@ -23,11 +29,11 @@
    "id": "5daef15c-82f4-4e3e-b256-c0e53ab05ec5",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T00:10:31.496339Z",
-     "iopub.status.busy": "2024-06-21T00:10:31.496116Z",
-     "iopub.status.idle": "2024-06-21T00:10:31.521513Z",
-     "shell.execute_reply": "2024-06-21T00:10:31.520520Z",
-     "shell.execute_reply.started": "2024-06-21T00:10:31.496320Z"
+     "iopub.execute_input": "2024-06-21T10:36:53.477609Z",
+     "iopub.status.busy": "2024-06-21T10:36:53.477441Z",
+     "iopub.status.idle": "2024-06-21T10:36:53.496457Z",
+     "shell.execute_reply": "2024-06-21T10:36:53.495589Z",
+     "shell.execute_reply.started": "2024-06-21T10:36:53.477595Z"
     },
     "tags": []
    },
@@ -43,11 +49,11 @@
    "id": "30ab3234-8205-4a1e-9d64-0fe7f64a6288",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T00:10:31.522995Z",
-     "iopub.status.busy": "2024-06-21T00:10:31.522733Z",
-     "iopub.status.idle": "2024-06-21T00:10:33.101576Z",
-     "shell.execute_reply": "2024-06-21T00:10:33.099986Z",
-     "shell.execute_reply.started": "2024-06-21T00:10:31.522973Z"
+     "iopub.execute_input": "2024-06-21T10:36:53.497420Z",
+     "iopub.status.busy": "2024-06-21T10:36:53.497250Z",
+     "iopub.status.idle": "2024-06-21T10:36:54.545305Z",
+     "shell.execute_reply": "2024-06-21T10:36:54.544627Z",
+     "shell.execute_reply.started": "2024-06-21T10:36:53.497407Z"
     },
     "tags": []
    },
@@ -87,11 +93,11 @@
    "id": "b85b2e7d-266b-48b3-a9b5-b1d95615676c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T00:10:33.104288Z",
-     "iopub.status.busy": "2024-06-21T00:10:33.103708Z",
-     "iopub.status.idle": "2024-06-21T00:10:33.122895Z",
-     "shell.execute_reply": "2024-06-21T00:10:33.121996Z",
-     "shell.execute_reply.started": "2024-06-21T00:10:33.104267Z"
+     "iopub.execute_input": "2024-06-21T10:36:54.546592Z",
+     "iopub.status.busy": "2024-06-21T10:36:54.546311Z",
+     "iopub.status.idle": "2024-06-21T10:36:54.559778Z",
+     "shell.execute_reply": "2024-06-21T10:36:54.559138Z",
+     "shell.execute_reply.started": "2024-06-21T10:36:54.546578Z"
     }
    },
    "outputs": [
@@ -99,8 +105,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-21 00:10:33 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using parquet file: ../../data/processed/henryk_recordings.parquet\n",
-      "2024-06-21 00:10:33 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
+      "2024-06-21 10:36:54 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using parquet file: ../../data/processed/henryk_recordings_stats.parquet\n",
+      "2024-06-21 10:36:54 - \u001b[32mINFO \u001b[0m - \u001b[34m<module>\u001b[0m - using audio files path: /mnt/onedrive/My Private/My documents/Other/Henryk/Alienacja rodzicielska materiały/Wiadomości do Henryczka\n"
      ]
     }
    ],
@@ -124,11 +130,11 @@
    "id": "fe77121e-0291-4d6e-aca2-89c2c43e45aa",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T00:10:33.123948Z",
-     "iopub.status.busy": "2024-06-21T00:10:33.123709Z",
-     "iopub.status.idle": "2024-06-21T00:11:18.463391Z",
-     "shell.execute_reply": "2024-06-21T00:11:18.462557Z",
-     "shell.execute_reply.started": "2024-06-21T00:10:33.123928Z"
+     "iopub.execute_input": "2024-06-21T10:36:54.561166Z",
+     "iopub.status.busy": "2024-06-21T10:36:54.560715Z",
+     "iopub.status.idle": "2024-06-21T10:37:28.838599Z",
+     "shell.execute_reply": "2024-06-21T10:37:28.837769Z",
+     "shell.execute_reply.started": "2024-06-21T10:36:54.561150Z"
     }
    },
    "outputs": [
@@ -136,9 +142,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-21 00:10:33 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 528 files\n",
+      "2024-06-21 10:36:54 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - retrieved 528 files\n",
       "processing 528 audio files |██████████████████████████████████████████████████| 100.0% \n",
-      "2024-06-21 00:11:18 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - generated stats for 528 audio recordings\n"
+      "2024-06-21 10:37:28 - \u001b[32mINFO \u001b[0m - \u001b[34mget_recordings_info\u001b[0m - generated stats for 528 audio recordings\n"
      ]
     }
    ],
@@ -161,11 +167,11 @@
    "id": "76b7c686-e201-4874-b0c1-8a74024605c4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T00:11:18.465014Z",
-     "iopub.status.busy": "2024-06-21T00:11:18.464751Z",
-     "iopub.status.idle": "2024-06-21T00:11:18.545024Z",
-     "shell.execute_reply": "2024-06-21T00:11:18.543990Z",
-     "shell.execute_reply.started": "2024-06-21T00:11:18.464994Z"
+     "iopub.execute_input": "2024-06-21T10:37:28.839475Z",
+     "iopub.status.busy": "2024-06-21T10:37:28.839243Z",
+     "iopub.status.idle": "2024-06-21T10:37:28.865380Z",
+     "shell.execute_reply": "2024-06-21T10:37:28.864399Z",
+     "shell.execute_reply.started": "2024-06-21T10:37:28.839458Z"
     }
    },
    "outputs": [],
