fixed issues with the variables names

--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -17,11 +17,11 @@
    "id": "98140383-188c-457c-8e04-7e4620b410a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T05:15:28.392550Z",
-     "iopub.status.busy": "2024-06-21T05:15:28.392215Z",
-     "iopub.status.idle": "2024-06-21T05:15:28.421147Z",
-     "shell.execute_reply": "2024-06-21T05:15:28.419968Z",
-     "shell.execute_reply.started": "2024-06-21T05:15:28.392526Z"
+     "iopub.execute_input": "2024-06-21T11:01:16.986431Z",
+     "iopub.status.busy": "2024-06-21T11:01:16.986173Z",
+     "iopub.status.idle": "2024-06-21T11:01:17.002387Z",
+     "shell.execute_reply": "2024-06-21T11:01:17.001770Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:16.986410Z"
     },
     "tags": []
    },
@@ -36,18 +36,21 @@
    "execution_count": 2,
    "id": "f4b557c6-c6ed-4c9c-bb72-60b1256a6003",
    "metadata": {
+    "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T05:15:29.910345Z",
-     "iopub.status.busy": "2024-06-21T05:15:29.910019Z",
-     "iopub.status.idle": "2024-06-21T05:15:33.108589Z",
-     "shell.execute_reply": "2024-06-21T05:15:33.107438Z",
-     "shell.execute_reply.started": "2024-06-21T05:15:29.910321Z"
-    }
+     "iopub.execute_input": "2024-06-21T11:01:17.003319Z",
+     "iopub.status.busy": "2024-06-21T11:01:17.003146Z",
+     "iopub.status.idle": "2024-06-21T11:01:18.072234Z",
+     "shell.execute_reply": "2024-06-21T11:01:18.071723Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:17.003306Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import openai\n",
     "import os\n",
     "import pandas as pd\n",
     "import json\n",
@@ -69,13 +72,18 @@
    "execution_count": 3,
    "id": "c8830692-5768-41d1-a831-8121746d079d",
    "metadata": {
+    "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T05:15:33.113032Z",
-     "iopub.status.busy": "2024-06-21T05:15:33.110846Z",
-     "iopub.status.idle": "2024-06-21T05:15:33.144992Z",
-     "shell.execute_reply": "2024-06-21T05:15:33.143948Z",
-     "shell.execute_reply.started": "2024-06-21T05:15:33.113003Z"
-    }
+     "iopub.execute_input": "2024-06-21T11:01:18.074013Z",
+     "iopub.status.busy": "2024-06-21T11:01:18.073367Z",
+     "iopub.status.idle": "2024-06-21T11:01:18.090755Z",
+     "shell.execute_reply": "2024-06-21T11:01:18.090056Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:18.073998Z"
+    },
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -104,11 +112,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T05:15:36.305301Z",
-     "iopub.status.busy": "2024-06-21T05:15:36.304915Z",
-     "iopub.status.idle": "2024-06-21T05:15:36.432849Z",
-     "shell.execute_reply": "2024-06-21T05:15:36.431925Z",
-     "shell.execute_reply.started": "2024-06-21T05:15:36.305275Z"
+     "iopub.execute_input": "2024-06-21T11:01:18.091840Z",
+     "iopub.status.busy": "2024-06-21T11:01:18.091654Z",
+     "iopub.status.idle": "2024-06-21T11:01:18.164585Z",
+     "shell.execute_reply": "2024-06-21T11:01:18.163800Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:18.091827Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -120,7 +128,7 @@
     "# recordings transcriptions\n",
     "df_transcriptions = pd.read_parquet(FILE_TRANSCRIPTIONS_PARQUET)\n",
     "df_transcriptions = recordings.sort_df_by_date_inferred_from_name(df_transcriptions)\n",
-    "df_transcription_classification = pd.read_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
+    "df_transcriptions_classifications = pd.read_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
    ]
   },
   {
@@ -138,16 +146,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 5,
    "id": "0559d797-343c-45df-a5dd-8bb9d6ca43a3",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:12:40.587094Z",
-     "iopub.status.busy": "2024-06-21T09:12:40.586861Z",
-     "iopub.status.idle": "2024-06-21T09:12:40.985757Z",
-     "shell.execute_reply": "2024-06-21T09:12:40.985118Z",
-     "shell.execute_reply.started": "2024-06-21T09:12:40.587078Z"
+     "iopub.execute_input": "2024-06-21T11:01:18.165393Z",
+     "iopub.status.busy": "2024-06-21T11:01:18.165240Z",
+     "iopub.status.idle": "2024-06-21T11:01:18.181132Z",
+     "shell.execute_reply": "2024-06-21T11:01:18.180506Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:18.165381Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -156,21 +164,21 @@
    },
    "outputs": [],
    "source": [
-    "df_transcriptions_selected = df_transcriptions.iloc[0:200]"
+    "df_transcriptions_selected = df_transcriptions.iloc[200:300]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 8,
    "id": "9b89edcb-76f6-4596-a4f5-d7abc9dba479",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:14:41.794471Z",
-     "iopub.status.busy": "2024-06-21T09:14:41.794081Z",
-     "iopub.status.idle": "2024-06-21T09:14:43.080967Z",
-     "shell.execute_reply": "2024-06-21T09:14:43.080258Z",
-     "shell.execute_reply.started": "2024-06-21T09:14:41.794452Z"
+     "iopub.execute_input": "2024-06-21T11:02:09.874540Z",
+     "iopub.status.busy": "2024-06-21T11:02:09.873844Z",
+     "iopub.status.idle": "2024-06-21T11:02:10.777009Z",
+     "shell.execute_reply": "2024-06-21T11:02:10.776109Z",
+     "shell.execute_reply.started": "2024-06-21T11:02:09.874519Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -185,16 +193,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "id": "a1a3727e-aa8a-4219-b8e3-51b5e01c1553",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:47:59.759249Z",
-     "iopub.status.busy": "2024-06-21T09:47:59.758957Z",
-     "iopub.status.idle": "2024-06-21T10:35:15.675867Z",
-     "shell.execute_reply": "2024-06-21T10:35:15.675142Z",
-     "shell.execute_reply.started": "2024-06-21T09:47:59.759229Z"
+     "iopub.execute_input": "2024-06-21T11:02:11.284426Z",
+     "iopub.status.busy": "2024-06-21T11:02:11.283674Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -206,14 +211,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-21 09:48:00 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
-      "2024-06-21 09:48:00 - \u001b[33mWARNING\u001b[0m - \u001b[34mperform_classification\u001b[0m - unable to provide initial classification dataset, classification is in progress\n",
-      "classifying 200 transcriptions |████████████████████████████████████████| 100.0% done.                                                                   s...\n",
-      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - more (203) classifications than requested, classifier was executed before on different dataset \n",
-      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - \u001b[22m\u001b[49m\u001b[92m*** all 200 requested transcriptions classifications were completed ***\u001b[0m\n",
-      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 203 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
-      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
-      "2024-06-21 10:35:15 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - new file will be replacing old one (old has 132 records vs new 203)\n"
+      "2024-06-21 11:02:11 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
+      "2024-06-21 11:02:11 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - found 203 (0) existing classifications, those transcriptions will be ignored\n",
+      "classifying   2/100 transcriptions |----------------------------------------| 2.0% [202] Rodzice Henryk 2023-02-19 Kot Filemon pojawia się w izbie i Bon...\r"
      ]
     }
    ],
@@ -225,16 +225,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "id": "c79de720-ae51-416d-ba1a-5ec26b3eb26a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "exit_cell()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "db01364e-e17a-4012-ba1b-690dcd9b3d26",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T06:02:31.959417Z",
-     "iopub.status.busy": "2024-06-21T06:02:31.959197Z",
-     "iopub.status.idle": "2024-06-21T06:02:31.976020Z",
-     "shell.execute_reply": "2024-06-21T06:02:31.975425Z",
-     "shell.execute_reply.started": "2024-06-21T06:02:31.959399Z"
+     "iopub.status.busy": "2024-06-21T11:01:19.334183Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.334371Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.334295Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.334288Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -253,6 +262,12 @@
    "id": "c806873b-ce6f-42b7-abd8-2e3cfd712375",
    "metadata": {
     "editable": true,
+    "execution": {
+     "iopub.status.busy": "2024-06-21T11:01:19.335110Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.335287Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.335213Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.335206Z"
+    },
     "slideshow": {
      "slide_type": ""
     },
@@ -267,49 +282,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": null,
    "id": "15ab84c4-7854-42b3-9b4e-48f0e1012dc4",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:45:26.927834Z",
-     "iopub.status.busy": "2024-06-21T09:45:26.927083Z",
-     "iopub.status.idle": "2024-06-21T09:45:27.565092Z",
-     "shell.execute_reply": "2024-06-21T09:45:27.564318Z",
-     "shell.execute_reply.started": "2024-06-21T09:45:26.927816Z"
+     "iopub.status.busy": "2024-06-21T11:01:19.336579Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.336795Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.336713Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.336704Z"
     },
     "slideshow": {
      "slide_type": ""
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 132 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
-      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
-      "2024-06-21 09:45:27 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - new file will be replacing old one (old has 132 records vs new 132)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "transcription_classifier.save_classification_parquet(FILE_TRANSCRIPTIONS_CLASSIFICATION_PARQUET)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "id": "303db268-009c-4a57-bf0a-1b856502c136",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:45:35.531262Z",
-     "iopub.status.busy": "2024-06-21T09:45:35.531040Z",
-     "iopub.status.idle": "2024-06-21T09:45:35.552954Z",
-     "shell.execute_reply": "2024-06-21T09:45:35.552089Z",
-     "shell.execute_reply.started": "2024-06-21T09:45:35.531247Z"
+     "iopub.status.busy": "2024-06-21T11:01:19.338034Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.338250Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.338168Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.338159Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -323,16 +326,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "id": "3c047d1a-7f42-4dc0-abb2-d3fe85b77dd7",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:13:33.224128Z",
-     "iopub.status.busy": "2024-06-21T09:13:33.223904Z",
-     "iopub.status.idle": "2024-06-21T09:13:33.239887Z",
-     "shell.execute_reply": "2024-06-21T09:13:33.238875Z",
-     "shell.execute_reply.started": "2024-06-21T09:13:33.224113Z"
+     "iopub.status.busy": "2024-06-21T11:01:19.339330Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.339540Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.339462Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.339454Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -346,16 +348,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": null,
    "id": "98de1c1a-d7f2-4420-83de-3248d9aaf449",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T09:13:56.109994Z",
-     "iopub.status.busy": "2024-06-21T09:13:56.109768Z",
-     "iopub.status.idle": "2024-06-21T09:13:56.125419Z",
-     "shell.execute_reply": "2024-06-21T09:13:56.124896Z",
-     "shell.execute_reply.started": "2024-06-21T09:13:56.109965Z"
+     "iopub.status.busy": "2024-06-21T11:01:19.340339Z",
+     "iopub.status.idle": "2024-06-21T11:01:19.340542Z",
+     "shell.execute_reply": "2024-06-21T11:01:19.340466Z",
+     "shell.execute_reply.started": "2024-06-21T11:01:19.340457Z"
     },
     "slideshow": {
      "slide_type": ""
