--- a/notebooks/recordings/4 - Generate recordings descriptions.ipynb
+++ b/notebooks/recordings/4 - Generate recordings descriptions.ipynb
@@ -17,11 +17,11 @@
    "id": "98140383-188c-457c-8e04-7e4620b410a1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:01:16.986431Z",
-     "iopub.status.busy": "2024-06-21T11:01:16.986173Z",
-     "iopub.status.idle": "2024-06-21T11:01:17.002387Z",
-     "shell.execute_reply": "2024-06-21T11:01:17.001770Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:16.986410Z"
+     "iopub.execute_input": "2024-06-21T12:25:14.126675Z",
+     "iopub.status.busy": "2024-06-21T12:25:14.126515Z",
+     "iopub.status.idle": "2024-06-21T12:25:14.141709Z",
+     "shell.execute_reply": "2024-06-21T12:25:14.141059Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:14.126662Z"
     },
     "tags": []
    },
@@ -38,11 +38,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:01:17.003319Z",
-     "iopub.status.busy": "2024-06-21T11:01:17.003146Z",
-     "iopub.status.idle": "2024-06-21T11:01:18.072234Z",
-     "shell.execute_reply": "2024-06-21T11:01:18.071723Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:17.003306Z"
+     "iopub.execute_input": "2024-06-21T12:25:14.142583Z",
+     "iopub.status.busy": "2024-06-21T12:25:14.142424Z",
+     "iopub.status.idle": "2024-06-21T12:25:15.745537Z",
+     "shell.execute_reply": "2024-06-21T12:25:15.745034Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:14.142571Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -74,11 +74,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:01:18.074013Z",
-     "iopub.status.busy": "2024-06-21T11:01:18.073367Z",
-     "iopub.status.idle": "2024-06-21T11:01:18.090755Z",
-     "shell.execute_reply": "2024-06-21T11:01:18.090056Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:18.073998Z"
+     "iopub.execute_input": "2024-06-21T12:25:15.747182Z",
+     "iopub.status.busy": "2024-06-21T12:25:15.746907Z",
+     "iopub.status.idle": "2024-06-21T12:25:15.769381Z",
+     "shell.execute_reply": "2024-06-21T12:25:15.768649Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:15.747168Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -112,11 +112,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:01:18.091840Z",
-     "iopub.status.busy": "2024-06-21T11:01:18.091654Z",
-     "iopub.status.idle": "2024-06-21T11:01:18.164585Z",
-     "shell.execute_reply": "2024-06-21T11:01:18.163800Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:18.091827Z"
+     "iopub.execute_input": "2024-06-21T12:25:15.770455Z",
+     "iopub.status.busy": "2024-06-21T12:25:15.770252Z",
+     "iopub.status.idle": "2024-06-21T12:25:15.852910Z",
+     "shell.execute_reply": "2024-06-21T12:25:15.852252Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:15.770442Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -151,11 +151,11 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:01:18.165393Z",
-     "iopub.status.busy": "2024-06-21T11:01:18.165240Z",
-     "iopub.status.idle": "2024-06-21T11:01:18.181132Z",
-     "shell.execute_reply": "2024-06-21T11:01:18.180506Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:18.165381Z"
+     "iopub.execute_input": "2024-06-21T12:25:15.853684Z",
+     "iopub.status.busy": "2024-06-21T12:25:15.853504Z",
+     "iopub.status.idle": "2024-06-21T12:25:15.868499Z",
+     "shell.execute_reply": "2024-06-21T12:25:15.867805Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:15.853673Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -164,21 +164,21 @@
    },
    "outputs": [],
    "source": [
-    "df_transcriptions_selected = df_transcriptions.iloc[200:300]"
+    "df_transcriptions_selected = df_transcriptions.iloc[400:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "9b89edcb-76f6-4596-a4f5-d7abc9dba479",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:02:09.874540Z",
-     "iopub.status.busy": "2024-06-21T11:02:09.873844Z",
-     "iopub.status.idle": "2024-06-21T11:02:10.777009Z",
-     "shell.execute_reply": "2024-06-21T11:02:10.776109Z",
-     "shell.execute_reply.started": "2024-06-21T11:02:09.874519Z"
+     "iopub.execute_input": "2024-06-21T12:25:15.869354Z",
+     "iopub.status.busy": "2024-06-21T12:25:15.869143Z",
+     "iopub.status.idle": "2024-06-21T12:25:16.836787Z",
+     "shell.execute_reply": "2024-06-21T12:25:16.836114Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:15.869342Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -193,13 +193,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "a1a3727e-aa8a-4219-b8e3-51b5e01c1553",
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.execute_input": "2024-06-21T11:02:11.284426Z",
-     "iopub.status.busy": "2024-06-21T11:02:11.283674Z"
+     "iopub.execute_input": "2024-06-21T12:25:16.837685Z",
+     "iopub.status.busy": "2024-06-21T12:25:16.837497Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.379837Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.379165Z",
+     "shell.execute_reply.started": "2024-06-21T12:25:16.837673Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -211,9 +214,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2024-06-21 11:02:11 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_df_transcriptions_classifications.parquet\n",
-      "2024-06-21 11:02:11 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - found 203 (0) existing classifications, those transcriptions will be ignored\n",
-      "classifying   2/100 transcriptions |----------------------------------------| 2.0% [202] Rodzice Henryk 2023-02-19 Kot Filemon pojawia się w izbie i Bon...\r"
+      "2024-06-21 12:25:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - intermediate classification results will be written to /tmp/temp_sharp_rhodes.parquet\n",
+      "2024-06-21 12:25:16 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - found 306 (103) existing classifications, those transcriptions will be ignored\n",
+      "classifying 200 transcriptions |████████████████████████████████████████| 100.0% done.                                                                    ...\n",
+      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - more (403) classifications than requested, classifier was executed before on different dataset \n",
+      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34mperform_classification\u001b[0m - \u001b[22m\u001b[49m\u001b[32m*** all 200 requested transcriptions classifications were completed ***\u001b[0m\n",
+      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - saving 403 classification results to to ../../data/processed/henryk_transcriptions_classification.parquet\n",
+      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - found older file with the same name, checking the older file size vs new...\n",
+      "2024-06-21 13:32:35 - \u001b[32mINFO \u001b[0m - \u001b[34msave_classification_parquet\u001b[0m - old file will be overwritten by a new one (old has 306 records vs new 403)\n"
      ]
     }
    ],
@@ -225,10 +233,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c79de720-ae51-416d-ba1a-5ec26b3eb26a",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2024-06-21T13:32:35.381304Z",
+     "iopub.status.busy": "2024-06-21T13:32:35.380608Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.423729Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.422838Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.381288Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "StopExecution",
+     "evalue": "stopped",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
     "exit_cell()"
    ]
@@ -240,10 +263,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.334183Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.334371Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.334295Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.334288Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.424127Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.424312Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.424242Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.424235Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -263,10 +286,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.335110Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.335287Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.335213Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.335206Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.425209Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.425405Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.425330Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.425323Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -287,10 +310,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.336579Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.336795Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.336713Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.336704Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.426080Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.426309Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.426230Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.426222Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -309,10 +332,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.338034Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.338250Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.338168Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.338159Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.427474Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.427663Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.427589Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.427582Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -331,10 +354,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.339330Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.339540Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.339462Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.339454Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.428719Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.428911Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.428839Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.428833Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -353,10 +376,10 @@
    "metadata": {
     "editable": true,
     "execution": {
-     "iopub.status.busy": "2024-06-21T11:01:19.340339Z",
-     "iopub.status.idle": "2024-06-21T11:01:19.340542Z",
-     "shell.execute_reply": "2024-06-21T11:01:19.340466Z",
-     "shell.execute_reply.started": "2024-06-21T11:01:19.340457Z"
+     "iopub.status.busy": "2024-06-21T13:32:35.430274Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.430472Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.430396Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.430388Z"
     },
     "slideshow": {
      "slide_type": ""
@@ -372,6 +395,23 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5a111228-32d1-4788-a470-546361c618a5",
+   "metadata": {
+    "execution": {
+     "iopub.status.busy": "2024-06-21T13:32:35.431271Z",
+     "iopub.status.idle": "2024-06-21T13:32:35.431452Z",
+     "shell.execute_reply": "2024-06-21T13:32:35.431381Z",
+     "shell.execute_reply.started": "2024-06-21T13:32:35.431374Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "len(df_backup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ee7e810-f0e4-4151-82a1-354f8f5c1f6e",
    "metadata": {},
    "outputs": [],
    "source": []
